# platform.core.api.call

./: CMakeLists.txt  capi-telephony-call.pc.in
call-engine/: voice-call-bt.c  voice-call-core.c  voice-call-dbus.c  voice-call-device.c  voice-call-engine.c  voice-call-service.c  voice-call-sound.c
call-engine/core/: vc-core-callagent.c  vc-core-callmanager.c  vc-core-ccbs.c  vc-core-ecc.c  vc-core-engine-group.c  vc-core-engine-status.c  vc-core-engine.c  vc-core-svcall.c  vc-core-tapi-evnt.c  vc-core-tapi-rqst.c  vc-core-util.c
call-engine/core/include/: vc-core-callagent.h  vc-core-callmanager.h  vc-core-ccbs.h  vc-core-ecc.h  vc-core-engine-group.h  vc-core-engine-status.h  vc-core-engine-types.h  vc-core-engine.h  vc-core-error.h  vc-core-svcall.h  vc-core-tapi-evnt.h  vc-core-tapi-rqst.h  vc-core-util.h
call-engine/etc/rc.d/rc3.d/: S60voice-calld
call-engine/include/: voice-call-bt.h  voice-call-core.h  voice-call-dbus.h  voice-call-device.h  voice-call-engine-msg.h  voice-call-engine.h  voice-call-service.h  voice-call-sound.h
debian/: README  changelog  control  org.tizen.call.postinst  rules
include/: call.h
packaging/: capi-telephony-call.spec  org.tizen.call.spec
src/: call.c
test/: CMakeLists.txt  call_get_video_call_state_test.c  call_get_voice_call_state_test.c  call_video_call_state_changed_test.c  call_voice_call_state_changed_test.c
ui/: CMakeLists.txt  default.conf  org.tizen.call.desktop.in  org.tizen.call.xml  vcui-app-data.h  vcui-app-window.c  vcui-app-window.h  vcui-application.c  vcui-application.h  vcui-doc-launch.c  vcui-doc-launch.h  vcui-document.c  vcui-document.h  vcui-engine-interface.c  vcui-engine-interface.h  vcui-view-callend.c  vcui-view-callend.h  vcui-view-choice.c  vcui-view-choice.h  vcui-view-common.c  vcui-view-common.h  vcui-view-dialing.c  vcui-view-dialing.h  vcui-view-elements.c  vcui-view-elements.h  vcui-view-incoming-lock.c  vcui-view-incoming-lock.h  vcui-view-incoming.c  vcui-view-incoming.h  vcui-view-keypad.c  vcui-view-keypad.h  vcui-view-layout-hd.h  vcui-view-layout-wvga.h  vcui-view-layout.h  vcui-view-multi-call-conf.c  vcui-view-multi-call-conf.h  vcui-view-multi-call-list.c  vcui-view-multi-call-list.h  vcui-view-multi-call-split.c  vcui-view-multi-call-split.h  (+4 more)
ui/call_edc/: vcui-view-button-layout.edc  vcui-view-caller-info.edc  vcui-view-dialing.edc  vcui-view-end-conf-call.edc  vcui-view-end-single-call.edc  vcui-view-incoming-lock.edc  vcui-view-incoming.edc  vcui-view-keypad.edc  vcui-view-landscape-quick-pannel.edc  vcui-view-multi-call-conf.edc  vcui-view-multi-call-list.edc  vcui-view-multi-call-split.edc  vcui-view-naviframe.edc  vcui-view-quick-pannel.edc  vcui-view-reject.edc  vcui-view-single-call.edc  vcui-view-ug-effect.edc  vcui-view-volume-popup.edc  voice-call-ui.edc
ui/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+12 more)
ui/src/: vcui-app-window.c  vcui-application.c  vcui-doc-launch.c  vcui-document.c  vcui-view-callend.c  vcui-view-choice.c  vcui-view-common.c  vcui-view-dialing.c  vcui-view-elements.c  vcui-view-incoming-lock.c  vcui-view-keypad.c  vcui-view-multi-call-conf.c  vcui-view-multi-call-list.c  vcui-view-multi-call-split.c  vcui-view-popup.c  vcui-view-quickpanel.c  vcui-view-single-call.c
ui/src/include/: vcui-app-data.h  vcui-application.h  vcui-doc-launch.h  vcui-document.h  vcui-view-callend.h  vcui-view-choice.h  vcui-view-common.h  vcui-view-dialing.h  vcui-view-elements.h  vcui-view-incoming-lock.h  vcui-view-keypad.h  vcui-view-layout-hd.h  vcui-view-multi-call-conf.h  vcui-view-multi-call-list.h  vcui-view-multi-call-split.h  vcui-view-popup.h  vcui-view-quickpanel.h  vcui-view-single-call.h
ui/themes/: call_theme.edc
