CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(voice-call-ui C)

# Architecture
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-D_CALL_ARCH_ARM_")
ENDIF()

#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
#ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{PREFIX}\"")
#ADD_DEFINITIONS("-DDATAFS=\"$ENV{DATADIR}\"")
#ADD_DEFINITIONS(${SHARED_FLAGS})


ADD_DEFINITIONS("-DCALL_DEBUG_ON_DLOG")
#ADD_DEFINITIONS("-DCALL_DEBUG_ON_SCREEN")

SET(COMMON_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")

ADD_SUBDIRECTORY(ui)

